@@ -4,6 +4,10 @@ local constants = {
   ---@type string
   CURRENT_RUIN_SET_KEY = "current-ruin-set",
 
+  -- Configuration key for enabling debug log
+  ---@type string
+  ENABLE_DEBUG_LOG_KEY = "ruins-enable-debug-log",
+
   -- Debug surface name
   ---@type string
   DEBUG_SURFACE_NAME = "debug-ruins"
