@@ -1,7 +1,9 @@
+local constants = require("constants")
+
 local parsing = {}
 
 ---@type boolean
-debug_log = settings.global["ruins-enable-debug-log"].value
+debug_log = settings.global[constants.ENABLE_DEBUG_LOG_KEY].value
 
 -- extend table 1 with table 2
 -- no safety checks, very naive
